frontend/shared/scss/elements/body.scss
@use "@stamhoofd/scss/base/fonts.scss";
@use "@stamhoofd/scss/base/variables.scss" as *;

:root, :host {
    // Always force scroll availability on mobile browsers, this is to fix glitches when
    // the tabbars should become visible after transitioning from a long to a short modal
    // min-height: 100vh;

    --st-horizontal-padding: 20px;
    --st-vertical-padding: 40px;

    --popup-horizontal-padding: 40px;
    --split-view-detail-horizontal-padding: 40px;
    --st-view-max-width: 700px; 

    --st-safe-area-top: 0px;
    --st-safe-area-top: env(safe-area-inset-top, 0px);
    --st-safe-area-bottom: 0px;
    --st-safe-area-bottom: env(safe-area-inset-bottom, 0px);

    --vh: 1vh;
    --vw: 1vw;

    @supports(width: min(1dvh,1lvh)) {
        // --vh: 1dvh; // Should be this
        --vh: min(1dvh,1lvh); // Bug in Safari 15, fixed in Safari 16.1, where 1dvh was larger than possible and caused bugs
    }

    // Support for VirtualKeyboard API (Chrome on Android)
    --keyboard-height: 0px;
    --keyboard-height: env(keyboard-inset-height, 0px);

    @media (max-width: 800px) {
        --st-horizontal-padding: 20px;
        --st-vertical-padding: 20px;
        --popup-horizontal-padding: 20px;
        --split-view-detail-horizontal-padding: 20px;
    }

    @media (max-width: 450px) {
        --st-horizontal-padding: 15px;
    }    

    --color-primary: #{$color-primary-original};
    --color-secundary: #{$color-secundary-original};
    --color-tertiary: #{$color-tertiary-original};
    --color-warning: #{$color-warning};

    --block-width: 40px;

    @media (max-width: 400px) {
        --block-width: 30px;
    }

    @media (max-width: 350px) {
        --block-width: 25px;
    }

    --color-background: #{$color-background-original};
    --color-background-shade: #{$color-background-shade-original};
    --color-background-shade-darker: #{$color-background-shade-darker-original};
    --color-dark: #{$color-dark-original};
    --color-dark-light: #{$color-dark-light-original};
    --color-gray: #{$color-gray-original};
    --color-gray-2: #{$color-gray-2-original};
    --color-gray-3: #{$color-gray-3-original};
    --color-gray-4: #{$color-gray-4-original};
    --color-gray-5: #{$color-gray-5-original};

    --color-secundary: #{$color-secundary-original};
    --color-secundary-background: #{$color-secundary-background-original};
    --color-secundary-dark: #{$color-secundary-dark-original};
    --color-secundary-border: #{$color-secundary-border-original};

    --color-tertiary: #{$color-tertiary-original};
    --color-tertiary-background: #{$color-tertiary-background-original};
    --color-tertiary-dark: #{$color-tertiary-dark-original};
    --color-tertiary-border: #{$color-tertiary-border-original};

    --color-warning: #{$color-warning-original};
    --color-warning-background: #{$color-warning-background-original};
    --color-warning-dark: #{$color-warning-dark-original};
    --color-warning-border: #{$color-warning-border-original};

    --color-success: #{$color-success-original};
    --color-success-background: #{$color-success-background-original};
    --color-success-dark: #{$color-success-dark-original};
    --color-success-border: #{$color-success-border-original};

    --color-payconiq: #{$color-payconiq-original};
    --color-payconiq-background: #{$color-payconiq-background-original};
    --color-payconiq-dark: #{$color-payconiq-dark-original};    
    --color-payconiq-border: #{$color-payconiq-border-original};

    --color-discount: #{$color-discount-original};
    --color-discount-background: #{$color-discount-background-original};
    --color-discount-dark: #{$color-discount-dark-original};
    --color-discount-border: #{$color-discount-border-original};
    
    --color-error: #{$color-error-original};
    --color-error-background: #{$color-error-background-original};
    --color-error-dark: #{$color-error-dark-original};
    --color-error-border: #{$color-error-border-original};

}

body, :host {
    --color-current-background: #{$color-background};
    --color-current-background-shade: #{$color-background-shade};
    color: $color-dark;

    // Fix clarity city spacing
    letter-spacing: -0.01em;
}

body {
    background: $color-background;
}

body,
html, :host {
    margin: 0;
    padding: 0;
    font-family: "Metropolis", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    
    -webkit-overflow-scrolling: auto;
    
    /* Disabel text resize as this doesn't work across animations */
    text-size-adjust: none;

    // Allow word break if it doesn't fit only
    word-break: break-word;

    will-change: scroll-position;
    
}


body.debug-safe-area {
    --st-safe-area-top: 50px;
    --st-safe-area-bottom: 50px;

    &:after {
        content: '';
        position: fixed;
        background-color: red;
        bottom: 0;
        left: 0;
        right: 0;
        height: var(--st-safe-area-bottom);
        opacity: 0.02;
        z-index: 1000000;
    }

    &:before {
        content: '';
        position: fixed;
        background-color: red;
        top: 0;
        left: 0;
        right: 0;
        height: var(--st-safe-area-top);
        opacity: 0.02;
        z-index: 1000000;
    }
}

